crates/parsing/src/grammar/snapshots/parsing__grammar__tests__empty-do-in-operator.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: do + 0

Start { kind: ExpressionOperatorChain }
  Start { kind: DoExpression }
    Start { kind: QualifiedDo }
      Token { kind: DoKw }
    Finish
    Token { kind: LayoutStart }
    Start { kind: LayoutList }
      Start { kind: DoDiscard }
        Error { message: "expected an expression" }
      Finish
    Finish
    Token { kind: LayoutEnd }
  Finish
  Start { kind: OperatorPair }
    Start { kind: SymbolOperator }
      Start { kind: QualifiedName }
        Start { kind: NameRef }
          Token { kind: Operator }
        Finish
      Finish
    Finish
    Start { kind: LiteralExpression }
      Token { kind: LiteralInteger }
    Finish
  Finish
Finish
