crates/parsing/src/grammar/snapshots/parsing__grammar__tests__empty-record.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: {}

Start { kind: RecordType }
  Token { kind: LeftCurly }
  Start { kind: RowInner }
  Finish
  Token { kind: RightCurly }
Finish
