crates/parsing/src/grammar/snapshots/parsing__grammar__tests__empty-row.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: ()

Start { kind: RowType }
  Token { kind: LeftParenthesis }
  Start { kind: RowInner }
  Finish
  Token { kind: RightParenthesis }
Finish
