crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@application.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/expression/application.input
---
Input: f x y z

Start { kind: ApplicationExpression }
  Start { kind: VariableExpression }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: TermArgument }
      Start { kind: VariableExpression }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Lower }
          Finish
        Finish
      Finish
    Finish
    Start { kind: TermArgument }
      Start { kind: VariableExpression }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Lower }
          Finish
        Finish
      Finish
    Finish
    Start { kind: TermArgument }
      Start { kind: VariableExpression }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Lower }
          Finish
        Finish
      Finish
    Finish
  Finish
Finish
