crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@char-binder.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/char-binder.input
---
Input: 'a'
Start { kind: BinderOperatorChain }
  Start { kind: LiteralBinder }
    Token { kind: LiteralChar }
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
