crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@constructor-n-arity.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/constructor-n-arity.input
---
Input: Cons 1
Start { kind: ConstructorBinder }
  Start { kind: QualifiedName }
    Start { kind: NameRef }
      Token { kind: Upper }
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: LiteralBinder }
      Token { kind: LiteralInteger }
    Finish
  Finish
Finish

