crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@constructor-zero-arity.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/constructor-zero-arity.input
---
Input: Nil
Start { kind: BinderOperatorChain }
  Start { kind: ConstructorBinder }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
    Finish
    Start { kind: OneOrMore }
    Finish
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
